fixed issue with event bubbling, collapse trigger made even bubbling, re-worked projectid to fix premade projects from doubling and minor styling changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,18 @@
     box-sizing: border-box;
 }
 
+:root {
+    --content-background: rgb(54, 54, 54);
+    --nav-background: rgb(82, 82, 82);
+    --button-hover: rgba(207, 207, 207, 0.473) ;
+}
+
 nav {
     display: flex;
     justify-content: center;
     height: 100vh;
     width: 20rem;
-    background-color: rgb(82, 82, 82);
+    background-color: var(--nav-background);
 }
 
 header {
@@ -19,7 +25,7 @@ header {
 
 body {
     display: flex;
-    background-color: rgb(54, 54, 54);
+    background-color: var(--content-background);
 }
 
 .button-container button {
@@ -27,14 +33,14 @@ body {
     justify-content: flex-start;
     align-items: center;
     height: 3rem;
-    padding-left: 1rem;
+    padding-left: 2rem;
     width: 100%;
     border: none;
-    background-color: rgb(82, 82, 82);
+    background-color: var(--nav-background);
 }
 
 button:hover {
-    background-color:rgba(207, 207, 207, 0.473) ;
+    background-color: var(--button-hover);
 }
 
 h1 {
@@ -47,7 +53,6 @@ h1 {
     display: flex;
     width: 100%;
     flex-direction: column;
-    gap: 1.5rem;
 }
 
 #delete-button {
@@ -62,7 +67,7 @@ margin-top: 10rem;
 width: 20rem;
 align-items: flex-start;
 justify-content: flex-start;
-background-color: rgb(82, 82, 82);
+background-color: var(--nav-background);
 
 }
 
@@ -95,7 +100,7 @@ background-color: rgb(82, 82, 82);
 .modal-form {
     display: flex;
     flex-direction: column;
-    background-color: rgb(82, 82, 82);
+    background-color: var(--nav-background);
     padding: 2rem;
     text-align: center;
     gap: 0.6rem;
@@ -131,7 +136,7 @@ background-color: rgb(82, 82, 82);
     height: auto;
     gap: 2em;
     padding: 2em;
-    border: 2px solid white;
+    border: 2px solid var(--nav-background);
 }
 
  .project-card > button, .todo-container > p {
@@ -151,6 +156,8 @@ background-color: rgb(82, 82, 82);
     opacity: 1;
     max-height: 1000px;
     width: 100%;
+    box-shadow: 1px 1px 10px 1px rgba(110, 110, 110, 0.600);
+    
 }
 
 
@@ -162,8 +169,9 @@ background-color: rgb(82, 82, 82);
     padding: 1rem;
     height: auto;
     width: 100%;
-    border: 2px solid white;
-    background-color: rgb(82, 82, 82);
+    border: 1px solid rgba(110, 110, 110, 0.600);
+    box-shadow: 5px 5px 5px 5px rgba(110, 110, 110, 0.600);
+    background-color: var(--nav-background);
 }
 
 
@@ -188,38 +196,48 @@ background-color: rgb(82, 82, 82);
 
 .priority-low {
     background-color: green;
+    box-shadow: 0 0 1px 3px rgba(0, 128, 0, 0.600);
 }
 
 .priority-medium {
-    background-color: orange;;
+    background-color: orange;
+    box-shadow:0 0 1px 3px rgba(255, 165, 0, 0.600) ;
 }
 
 .priority-high {
     background-color: red;
+    box-shadow: 0 0 1px 3px rgba(255, 0, 0, 0.600);
 }
 
 #project-list {
     display: flex;
     flex-direction: column;
-    border: 2px solid white;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
     height: auto;
+    transform: scaleY(0);
+    transform-origin: top;
+    opacity: 0;
+    transition: transform 0.5s ease;
 
 }
 
-
-#project-list {
-  transform: scaleY(0);
-  transform-origin: top;
-  opacity: 0;
-  transition: transform 0.5s ease;
-}
 
 #project-list.show {
 transform: scaleY(1);
-padding: 0.5rem;
+width: 100%;
+justify-content: center;
+align-items: center;
 opacity: 1;
+box-shadow: 2px 0 2px 3px rgba(54, 54, 54, 0.500);
 }
 
+.my-project {
+    width: 100%;
+    height: 2rem;
+    padding: 0.5rem;
+    padding-left: 2rem;
+}
+
+.my-project:hover {
+ background-color: var(--button-hover);
+
+}
